Fix cart-quantity position on mobile (#24)
* Rename functions to exclude "new"

* Fix cart-quantity position on mobile

* Fix car-quantity position when menu is open

* Fix menu-links font-size

* Fix issue on mobile where it was possible to scroll the site when cart was open

* Remove waves from cart menu on mobile

* Fix body css when cart is open on mobile

--- a/src/styles/global/cart.scss
+++ b/src/styles/global/cart.scss
@@ -31,13 +31,13 @@
   font-size: 20px;
   position: absolute;
   text-align: center;
-  width: 52px;
+  width: 40px;
   fill: $textColor;
   transition-duration: 0.2s;
   transition-property: transform;
 }
 .cart-quantity-transform {
-  transform: translateX(-100%) scale(1.2);
+  transform: translateX(-120%) scale(1.2);
 }
 
 .cart-icon {
@@ -53,6 +53,7 @@
   border: 3px $white solid;
   height: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
   padding: 30px;
   position: fixed;
   right: 0;
@@ -70,22 +71,23 @@
     .close-icon {
       margin-left: auto;
     }
+    &:after,
+    &:before {
+      background-image: url('../images/wave-reciept.svg');
+      background-repeat: no-repeat;
+      background-size: 100%;
+      height: 24px;
+      content: '';
+      left: -4px;
+      position: absolute;
+      width: calc(100% + 7px);
+      max-width: 546px;
+    }
   }
   @include media_min_break(sm) {
     width: 540px;
   }
-  &:after,
-  &:before {
-    background-image: url('../images/wave-reciept.svg');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height: 24px;
-    content: '';
-    left: -4px;
-    position: absolute;
-    width: calc(100% + 7px);
-    max-width: 546px;
-  }
+
   &:before {
     top: -24px;
     transform: rotate(180deg);
@@ -135,7 +137,10 @@
 .close-icon {
   @include burger-icon(38px);
   @include close-icon(38px);
-  @include media_max_break(md) {
-    @include close-icon(30px);
+}
+
+@media (max-width: 500px) {
+  .fixed-body-mobile {
+    position: fixed;
   }
 }
